<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/coordinates"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/_25_15_n_87_0_e"
                android:textStyle="bold" />
        </TableRow>


        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/country"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/india"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/state"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/bihar"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/district"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/bhagalpur"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/urban_agglomeration"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/bhagalpur"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/municipal_corporation"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/bhagalpur_municipal_corporation"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/area_total"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/_342_km2_132_sq_mi"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/area_rank"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/_2nd_in_bihar"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/population"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/_4_10_210"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/postal_index_number"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/_812001_81xxxx"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/std_code"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:padding="16dp"
                android:text="@string/_0641"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/vehicle_registration"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/br_10"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="16dp"
                android:text="@string/website"
                android:textStyle="bold" />

            <TextView
                android:padding="16dp"
                android:text="@string/bhagalpur_bih_nic_in"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</ScrollView>